tests/error/effects_errors/return_explicit_callable.err
Error: Type mismatch (at $FILE:12:10)
   | 
10 | @guppy
11 | def main() -> Callable[[int], int] @effects():
12 |    return impure_func
   |           ^^^^^^^^^^^ Expected return value of type `int -[]-> int`, got `int
   |                       -[ANY]-> int`

Guppy compilation failed due to 1 previous error
